--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@m/eslint-plugin-magic": "^45.14.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "framer-motion": "^12.6.3",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.511.0",
     "nodemailer": "^6.7.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -25,6 +28,7 @@
     "react-scripts": "5.0.1",
     "tilt": "^0.2.0",
     "vanilla": "^0.0.5",
+    "vanilla-tilt": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
